# rv32_tools

./: README.md
data/: rv_c.hjson  rv_i.hjson  rv_m.hjson  rv_system.hjson  rv_zicsr.hjson  rv_zifencei.hjson  template.hjson
sw/sim/c/: .gitignore  CMakeLists.txt  gcc_toolchain.cmake
sw/sim/c/common/: crt0.S  demo_system.c
sw/sim/c/disasm/: CMakeLists.txt  crt0.S  main.c
sw/sim/c/main/: CMakeLists.txt  main.c  sha256.c
sw/sim/common/: link.ld
tools/: list_riscv_instructions.py  parse_riscv_instructions.py
